...
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="6dp"
            android:weightSum="4">

            <ImageButton
                android:id="@+id/btn_indoor_map"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/bg_circle"
                android:backgroundTint="@color/concordia_red"
                android:contentDescription="@string/maps_info"
...
